// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should render correctly 1`] = `
<DocumentFragment>
  <form
    accept-charset="utf-8"
    action="test"
    class="m-form form"
    id="form"
    itemprop="potentialAction"
    itemscope=""
    itemtype="http://schema.org/CommunicateAction"
    method="post"
    novalidate=""
    role="form"
  >
    Form Children
  </form>
</DocumentFragment>
`;

exports[`Form should render correctly with defaults 1`] = `
<DocumentFragment>
  <form
    accept-charset="utf-8"
    action="test"
    class="m-form"
    itemprop="potentialAction"
    itemscope=""
    itemtype="http://schema.org/CommunicateAction"
    method="post"
    novalidate=""
    role="form"
  >
    Form Children
  </form>
</DocumentFragment>
`;
